tests/baselines/reference/unionTypeWithRecursiveSubtypeReduction2.errors.txt
unionTypeWithRecursiveSubtypeReduction2.ts(2,12): error TS2564: Property 'members' has no initializer and is not definitely assigned in the constructor.
unionTypeWithRecursiveSubtypeReduction2.ts(6,12): error TS2564: Property 'members' has no initializer and is not definitely assigned in the constructor.
unionTypeWithRecursiveSubtypeReduction2.ts(10,12): error TS2564: Property 'parent' has no initializer and is not definitely assigned in the constructor.
unionTypeWithRecursiveSubtypeReduction2.ts(14,12): error TS2564: Property 'parent' has no initializer and is not definitely assigned in the constructor.
unionTypeWithRecursiveSubtypeReduction2.ts(19,1): error TS2322: Type 'Property' is not assignable to type 'Class'.
  Types of property 'parent' are incompatible.
    Type 'Class | Module' is not assignable to type 'Namespace'.
      Property 'members' is missing in type 'Class' but required in type 'Namespace'.
unionTypeWithRecursiveSubtypeReduction2.ts(20,1): error TS2322: Type 'Class' is not assignable to type 'Property'.
  Types of property 'parent' are incompatible.
    Type 'Namespace' is not assignable to type 'Class | Module'.
      Type 'Namespace' is not assignable to type 'Module'.
        Types of property 'members' are incompatible.
          Type '(Class | Property)[]' is not assignable to type 'Class[]'.
            Type 'Class | Property' is not assignable to type 'Class'.
              Type 'Property' is not assignable to type 'Class'.
                Types of property 'parent' are incompatible.
                  Type 'Class | Module' is not assignable to type 'Namespace'.
                    Property 'members' is missing in type 'Class' but required in type 'Namespace'.


==== unionTypeWithRecursiveSubtypeReduction2.ts (6 errors) ====
    class Module {
        public members: Class[];
               ~~~~~~~
!!! error TS2564: Property 'members' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Namespace {
        public members: (Class | Property)[];
               ~~~~~~~
!!! error TS2564: Property 'members' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Class {
        public parent: Namespace;
               ~~~~~~
!!! error TS2564: Property 'parent' has no initializer and is not definitely assigned in the constructor.
    }
    
    class Property {
        public parent: Module | Class;
               ~~~~~~
!!! error TS2564: Property 'parent' has no initializer and is not definitely assigned in the constructor.
    }
    
    declare var c: Class;
    declare var p: Property;
    c = p;
    ~
!!! error TS2322: Type 'Property' is not assignable to type 'Class'.
!!! error TS2322:   Types of property 'parent' are incompatible.
!!! error TS2322:     Type 'Class | Module' is not assignable to type 'Namespace'.
!!! error TS2322:       Property 'members' is missing in type 'Class' but required in type 'Namespace'.
!!! related TS2728 unionTypeWithRecursiveSubtypeReduction2.ts:6:12: 'members' is declared here.
    p = c;
    ~
!!! error TS2322: Type 'Class' is not assignable to type 'Property'.
!!! error TS2322:   Types of property 'parent' are incompatible.
!!! error TS2322:     Type 'Namespace' is not assignable to type 'Class | Module'.
!!! error TS2322:       Type 'Namespace' is not assignable to type 'Module'.
!!! error TS2322:         Types of property 'members' are incompatible.
!!! error TS2322:           Type '(Class | Property)[]' is not assignable to type 'Class[]'.
!!! error TS2322:             Type 'Class | Property' is not assignable to type 'Class'.
!!! error TS2322:               Type 'Property' is not assignable to type 'Class'.
!!! error TS2322:                 Types of property 'parent' are incompatible.
!!! error TS2322:                   Type 'Class | Module' is not assignable to type 'Namespace'.
!!! error TS2322:                     Property 'members' is missing in type 'Class' but required in type 'Namespace'.
!!! related TS2728 unionTypeWithRecursiveSubtypeReduction2.ts:6:12: 'members' is declared here.
    